--- a/pagebuilder.css
+++ b/pagebuilder.css
@@ -288,6 +288,129 @@ footer .btn-gophr_button_outline.btn:not(.btn-custom-typo):not(.btn-inherit) {
 .gophr--mod-2-cols-image-text .gophr--title {margin-top: 20px !important;}
 .gophr--mod-2-cols-image-text .uncode-single-media-wrapper {clip-path: polygon(100% 0, 100% calc(100% - 50px), calc(100% - 50px) 100%, 0 100%, 0 0);}
 
+/***************************
+/* Modules - 2 columns typeform
+/* Contact Form 7 
+ */
+.gophr--mod-2-cols-typeform .row-parent {max-width: 1020px; padding: 60px 20px !important;}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .typeform-columns .typeform-col {
+    margin-bottom: 20px;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .wpcf7 span.wpcf7-not-valid-tip {
+    color: red !important;
+    margin-top: 2px;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type label strong em {
+    font-style: normal;
+    color: red;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type label input[type="text"], 
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type label input[type="email"] {
+    width: 100%;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type label textarea {
+    height: 60px;
+}
+
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type {
+    background-color: black;
+    clip-path: polygon(100% 0, 100% calc(100% - 50px), calc(100% - 50px) 100%, 0 100%, 0 0);
+    padding-top: 0;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type::before {
+    content: ""; 
+    display: block; 
+    position: absolute; 
+    top: 2px; 
+    left: 2px; 
+    width: calc(100% - 4px); 
+    height: calc(100% - 4px); 
+    background-color: var(--gophr--body); 
+    clip-path: inherit;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type .uncol .uncell {
+    padding: 20px !important;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type .uncol .icon-box {
+    display: flex;
+    gap: 20px;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type .uncol .icon-box .icon-box-icon img {
+    width: 50px;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type .uncol .icon-box .icon-box-content {
+    flex: 1;
+}
+.gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type .uncol .icon-box .icon-box-content p {
+    margin-top: 0;
+}
+
+@media (min-width: 600px) {
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .typeform-columns {
+        display: flex;
+        gap: 20px;
+    }
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .typeform-columns .typeform-col {
+        width: 50%;
+    }
+}
+@media (min-width: 960px) {
+    .gophr--mod-2-cols-typeform .wpb_row {
+        padding-top: 62px;
+    }
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type {
+        width: calc(50% + 36px);
+        padding-right: 36px;
+    }
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .typeform-subheader {
+        position: absolute;
+        top: -62px;
+        left: 0;
+    }
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .typeform-heading {
+        margin-top: 0;
+    }
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:last-of-type {
+        width: calc(50% - 36px);
+        padding-left: 0;
+    }
+}
+@media (max-width: 959px) {
+    .gophr--mod-2-cols-typeform .wpb_row .column_parent:first-of-type .uncol .uncell {
+        padding-bottom: 36px;
+    }
+}
+
+.btn-submit_typeform.btn-gophr_button_outline {
+    padding: 0 !important;
+    margin-top: 20px;
+    min-width: 160px;
+    width: 160px;
+}
+.btn-submit_typeform.btn-gophr_button_outline::after {
+    right: 18px;
+}
+.btn-submit_typeform.btn-gophr_button_outline::after, 
+.btn-submit_typeform.btn-gophr_button_outline input[type="submit"] {
+    font-size: 13px;
+    font-weight: 800 !important;
+}
+.btn-submit_typeform.btn-gophr_button_outline input[type="submit"] {
+    font-family: "ES Klarheit Kurrent" !important;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    outline: 0;
+    color: var(--gophr--grey);
+    border: 2px solid var(--gophr--grey);
+    background-color: transparent;
+    width: 100% !important;
+    text-align: left !important;
+    padding-left: 18px;
+}
+.btn-submit_typeform.btn-gophr_button_outline input[type="submit"]:hover {
+    color: white !important; border-color: var(--gophr--purple) !important;
+}
+
 /* Modules - carousels */
 .gophr--mod-carousel .row-parent {padding-top: 40px !important; padding-bottom: 80px !important;}
 .gophr--mod-carousel .swiper-slide .wpb_row {margin-left: 0 !important;}
@@ -547,6 +670,7 @@ html.js .gophr--mod-carousel .row-parent {opacity: 0;}
 .gophr--pink-scheme .btn-gophr_button_solid:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):focus, 
 .gophr--pink-scheme .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 .gophr--pink-scheme .gophr--bg-dark .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
+.gophr--pink-scheme .btn-submit_typeform.btn-gophr_button_outline input[type="submit"]:hover, 
 header.gophr--pink-scheme .navbar-cta ul li a.btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 footer.gophr--pink-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover {
     border-color: var(--gophr--pink) !important;
@@ -574,6 +698,7 @@ footer.gophr--pink-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat
 .gophr--red-scheme .btn-gophr_button_solid:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):focus, 
 .gophr--red-scheme .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 .gophr--red-scheme .gophr--bg-dark .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
+.gophr--red-scheme .btn-submit_typeform.btn-gophr_button_outline input[type="submit"]:hover, 
 header.gophr--red-scheme .navbar-cta ul li a.btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 footer.gophr--red-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover {
     border-color: var(--gophr--red) !important;
@@ -601,6 +726,7 @@ footer.gophr--red-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat)
 .gophr--orange-scheme .btn-gophr_button_solid:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):focus, 
 .gophr--orange-scheme .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 .gophr--orange-scheme .gophr--bg-dark .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
+.gophr--orange-scheme .btn-submit_typeform.btn-gophr_button_outline input[type="submit"]:hover, 
 header.gophr--orange-scheme .navbar-cta ul li a.btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 footer.gophr--orange-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover {
     border-color: var(--gophr--orange) !important;
@@ -628,6 +754,7 @@ footer.gophr--orange-scheme .btn-container .btn-gophr_button_outline:not(.btn-fl
 .gophr--lightgreen-scheme .btn-gophr_button_solid:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):focus, 
 .gophr--lightgreen-scheme .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 .gophr--lightgreen-scheme .gophr--bg-dark .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
+.gophr--lightgreen-scheme .btn-submit_typeform.btn-gophr_button_outline input[type="submit"]:hover, 
 header.gophr--lightgreen-scheme .navbar-cta ul li a.btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover, 
 footer.gophr--lightgreen-scheme .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-nobg):not(.icon-animated):not(.btn-text-skin):hover {
     color: var(--gophr--grey) !important; border-color: var(--gophr--lightgreen) !important;
@@ -877,7 +1004,7 @@ footer .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-no
 /***************************
 /* Typeform - Contact Form 7 
  */
-.gophr__typeform .wpb_row .column_parent:first-of-type .typeform-columns .typeform-col {
+/* .gophr__typeform .wpb_row .column_parent:first-of-type .typeform-columns .typeform-col {
     margin-bottom: 20px;
 }
 .gophr__typeform .wpb_row .column_parent:first-of-type .wpcf7 span.wpcf7-not-valid-tip {
@@ -943,7 +1070,7 @@ footer .btn-container .btn-gophr_button_outline:not(.btn-flat):not(.btn-hover-no
 }
 .gophr__typeform .wpb_row .column_parent:last-of-type .uncol .icon-box .icon-box-content p {
     margin-top: 0;
-}
+} */
 /*----------------------------------------------------------
 ### END STYLE | GOPHR - New Design
 ----------------------------------------------------------*/
