Locations - updated module/template listings from <div> to bullet points <li> tags, CSS update to restructure city listings

--- a/pagebuilder.css
+++ b/pagebuilder.css
@@ -477,34 +477,37 @@ dialog.gophr--modal .modal-button {
 .gophr--mod-locations .locations-list .heading-text h4 {
     color: white;
 }
-.gophr--mod-locations .locations-list .uncode-list {
+.gophr--mod-locations .locations-list .uncode-list ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
 }
-.gophr--mod-locations .locations-list .uncode-list div {
+.gophr--mod-locations .locations-list .uncode-list ul li {
     position: relative;
+    line-height: normal;
     padding-left: 18px;
+    margin: 0 !important;
 }
-.gophr--mod-locations .locations-list .uncode-list div::before {
+.gophr--mod-locations .locations-list .uncode-list ul li::before {
     content: "\25BA";
+    font-size: 15px;
     position: absolute;
-    top: 2px;
+    top: 0;
     left: 0;
     color: lightslategrey;
 }
 @media (max-width: 959px) {
-    .gophr--mod-locations .locations-list .uncode-list {
+    .gophr--mod-locations .locations-list .uncode-list ul {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
 @media (max-width: 767px) {
-    .gophr--mod-locations .locations-list .uncode-list {
+    .gophr--mod-locations .locations-list .uncode-list ul {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 @media (max-width: 639px) {
-    .gophr--mod-locations .locations-list .uncode-list {
+    .gophr--mod-locations .locations-list .uncode-list ul {
         grid-template-columns: 1fr 1fr;
     }
 }
