header navigation - fixed subsections letter i not displaying correctly, Locations - updated module from <div> to <ul><li> listings

--- a/Templates/Module- Locations.html
+++ b/Templates/Module- Locations.html
@@ -1,114 +1,284 @@
-[vc_row row_height_percent="0" overlay_alpha="50" gutter_size="3" column_width_percent="100" shift_y="0" z_index="0" uncode_shortcode_id="123126" el_class="gophr--module gophr--mod-locations"][vc_column width="1/1"][vc_custom_heading uncode_shortcode_id="164243"]Module: Locations[/vc_custom_heading][vc_column_text uncode_shortcode_id="173000"]Curabitur quis consequat est, non suscipit libero. Morbi et felis lacinia, volutpat purus eu, volutpat lacus. Morbi dictum sem eget dui pharetra, at mollis dui tincidunt. Fusce malesuada, diam eget gravida dapibus, sem ex accumsan metus, at placerat felis eros id enim. Phasellus elementum massa vel lacus efficitur tincidunt.[/vc_column_text][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="130307"]East England[/vc_custom_heading][uncode_list uncode_shortcode_id="203132"]
-<div><a href="https://www.google.com" target="_blank" rel="noopener">Peterborough</a></div>
-<div>Cambridge</div>
-<div>Luton</div>
-<div>Ipswich</div>
-<div>Norwich</div>
-<div>Ely</div>
-<div>Thetford</div>
-<div>Letchworth Garden City</div>
-<div>Eye</div>
-<div>Holt</div>
-<div>Saxmundham</div>
-<div>Halesworth</div>
-<div>Fakenham</div>
-<div>Downham Market</div>
-<div>Royston</div>
-<div>Aylsham</div>
-<div>Framlingham</div>
-<div>Wisbech</div>
-<div>Cromer</div>
-<div>Bury St Edmunds</div>
-<div>Ampthill</div>
-<div>North Walsham</div>
-<div>Dereham</div>
-<div>King's Lynn</div>
-<div>Aldeburgh</div>
-<div>Diss</div>
-<div>Sheringham</div>
-<div>Mildenhall</div>
-<div>Woodbridge</div>
-<div>Stowmarket</div>
-<div>Attleborough</div>
-<div>Great Yarmouth</div>
-<div>Saffron Walden</div>
-<div>Potton</div>
-<div>Hadleigh</div>
-<div>Acle</div>
-<div>Southwold</div>
-<div>Woburn</div>
-<div>Hingham</div>
-<div>Reepham</div>
-<div>Loddon</div>
-<div>Orford</div>
-<div>Watton</div>
-<div>Ramsey</div>
-<div>Arlesey</div>
-<div>Swaffham</div>
-<div>Coggeshall</div>
-<div>Manningtree</div>
-<div>Clare</div>
-<div>Godmanchester</div>
-<div>Shefford</div>
-[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="112127"]East Midlands[/vc_custom_heading][uncode_list uncode_shortcode_id="129304"]
-<div><a href="https://www.google.com" target="_blank" rel="noopener">Leicester</a></div>
-<div>Nottingham</div>
-<div>Lincoln</div>
-<div>Loughborough</div>
-<div>Northamptonshire</div>
-<div>Leicestershire</div>
-<div>Lincolnshire</div>
-<div>Amber Valley</div>
-[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="163997"]Greater London[/vc_custom_heading][uncode_list uncode_shortcode_id="541985"]
-<div><a href="https://www.google.com" target="_blank" rel="noopener">London</a></div>
-<div>City of London</div>
-<div>Greenwich</div>
-<div>City of Westminster</div>
-<div>Croydon</div>
-<div>Kingston upon Thames</div>
-<div>Richmond</div>
-<div>Southwark</div>
-<div>Sutton</div>
-<div>Islington</div>
-<div>Westminster</div>
-<div>Acton</div>
-<div>Highgate</div>
-<div>Hampstead</div>
-<div>Wapping</div>
-<div>Uxbridge</div>
-<div>London Borough of Hackney</div>
-<div>Romford</div>
-<div>Enfield</div>
-<div>Downe</div>
-<div>Havering-atte-Bower</div>
-<div>Camberwell</div>
-<div>Dagenham</div>
-<div>Spitalfields</div>
-<div>Harrow</div>
-<div>Totteridge</div>
-<div>Northolt</div>
-<div>Wennington</div>
-<div>Longford</div>
-<div>Brentford</div>
-<div>Twickenham</div>
-<div>Bethnal Green</div>
-<div>Pratt's Bottom</div>
-<div>Finchley</div>
-<div>Marylebone</div>
-<div>Pimlico</div>
-<div>North Ockendon</div>
-<div>Noak Hill</div>
-<div>Addington</div>
-<div>Cranford</div>
-<div>Harmondsworth</div>
-<div>Sipson</div>
-<div>Whitechapel</div>
-<div>Malden Rushett</div>
-<div>Harefield</div>
-<div>Keston</div>
-<div>Petersham</div>
-<div>Cudham</div>
-<div>Norbiton</div>
-<div>Sanderstead</div>
-<div>Arkley</div>
+[vc_row row_height_percent="0" overlay_alpha="50" gutter_size="3" column_width_percent="100" shift_y="0" z_index="0" uncode_shortcode_id="333456" el_class="gophr--module gophr--mod-locations gophr--bg-white" shape_dividers=""][vc_column width="1/1"][vc_custom_heading uncode_shortcode_id="166596"]Where Gophr Delivers:[/vc_custom_heading][vc_column_text uncode_shortcode_id="552649"]Gophr delivers daily across Greater London, and in over 300 towns and cities right across the UK. You'll find our most upto-date coverage below. But if you can't find the location you're looking for, drop us an email and we can probably help.[/vc_column_text][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="163997"]Greater London[/vc_custom_heading][uncode_list uncode_shortcode_id="117503"]
+<ul>
+ 	<li>London</li>
+ 	<li>City of London</li>
+ 	<li>Greenwich</li>
+ 	<li>City of Westminster</li>
+ 	<li>Croydon</li>
+ 	<li>Kingston upon Thames</li>
+ 	<li>Richmond</li>
+ 	<li>Southwark</li>
+ 	<li>Sutton</li>
+ 	<li>Islington</li>
+ 	<li>Westminster</li>
+ 	<li>Acton</li>
+ 	<li>Highgate</li>
+ 	<li>Hampstead</li>
+ 	<li>Wapping</li>
+ 	<li>Uxbridge</li>
+ 	<li>London Borough of Hackney</li>
+ 	<li>Romford</li>
+ 	<li>Enfield</li>
+ 	<li>Downe</li>
+ 	<li>Havering-atte-Bower</li>
+ 	<li>Camberwell</li>
+ 	<li>Dagenham</li>
+ 	<li>Spitalfields</li>
+ 	<li>Harrow</li>
+ 	<li>Totteridge</li>
+ 	<li>Northolt</li>
+ 	<li>Wennington</li>
+ 	<li>Longford</li>
+ 	<li>Brentford</li>
+ 	<li>Twickenham</li>
+ 	<li>Bethnal Green</li>
+ 	<li>Pratt's Bottom</li>
+ 	<li>Finchley</li>
+ 	<li>Marylebone</li>
+ 	<li>Pimlico</li>
+ 	<li>North Ockendon</li>
+ 	<li>Noak Hill</li>
+ 	<li>Addington</li>
+ 	<li>Cranford</li>
+ 	<li>Harmondsworth</li>
+ 	<li>Sipson</li>
+ 	<li>Whitechapel</li>
+ 	<li>Malden Rushett</li>
+ 	<li>Harefield</li>
+ 	<li>Keston</li>
+ 	<li>Petersham</li>
+ 	<li>Cudham</li>
+ 	<li>Norbiton</li>
+ 	<li>Sanderstead</li>
+ 	<li>Arkley</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="552288"]East of England[/vc_custom_heading][uncode_list uncode_shortcode_id="846855"]
+<ul>
+ 	<li>Basildon</li>
+ 	<li>Bedford</li>
+ 	<li>Braintree</li>
+ 	<li>Brentwood</li>
+ 	<li>Bury St Edmunds</li>
+ 	<li>Cambridge</li>
+ 	<li>Chelmsford</li>
+ 	<li>Clacton-on-Sea</li>
+ 	<li>Colchester</li>
+ 	<li>Epping</li>
+ 	<li>Great Yarmouth</li>
+ 	<li>Harlow</li>
+ 	<li>Hemel Hempstead</li>
+ 	<li>Hoddesdon</li>
+ 	<li>Ipswich</li>
+ 	<li>Luton</li>
+ 	<li>Maldon</li>
+ 	<li>Norwich</li>
+ 	<li>Peterborough</li>
+ 	<li>Romford</li>
+ 	<li>Southend-on-Sea</li>
+ 	<li>St Albans</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="963442"]North East[/vc_custom_heading][uncode_list uncode_shortcode_id="135273"]
+<ul>
+ 	<li>Bishop Auckland</li>
+ 	<li>Blaydon-on-Tyne</li>
+ 	<li>Chester-le-Street</li>
+ 	<li>Darlington</li>
+ 	<li>Gateshead</li>
+ 	<li>Middlesbrough</li>
+ 	<li>Newcastle upon Tyne</li>
+ 	<li>Redcar</li>
+ 	<li>South Shields</li>
+ 	<li>Stockton-on-Tees</li>
+ 	<li>Sunderland</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="176974"]North West[/vc_custom_heading][uncode_list uncode_shortcode_id="102763"]
+<ul>
+ 	<li>Altrincham</li>
+ 	<li>Barrow-in-Furness</li>
+ 	<li>Birkenhead</li>
+ 	<li>Blackburn</li>
+ 	<li>Blackpool</li>
+ 	<li>Bolton</li>
+ 	<li>Burnley</li>
+ 	<li>Bury</li>
+ 	<li>Fleetwood</li>
+ 	<li>Liverpool</li>
+ 	<li>Manchester</li>
+ 	<li>Preston</li>
+ 	<li>Radcliffe</li>
+ 	<li>Rochdale</li>
+ 	<li>Stockport</li>
+ 	<li>Wallasey</li>
+ 	<li>Warrington</li>
+ 	<li>Wigan</li>
+ 	<li>Wirral</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="112127"]East Midlands[/vc_custom_heading][uncode_list uncode_shortcode_id="645421"]
+<ul>
+ 	<li>Grantham</li>
+ 	<li>Leicester</li>
+ 	<li>Lincoln</li>
+ 	<li>Loughborough</li>
+ 	<li>Melton Mowbray</li>
+ 	<li>Newark-on-Trent</li>
+ 	<li>Nottingham</li>
+ 	<li>Worksop</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="491363"]West Midlands[/vc_custom_heading][uncode_list uncode_shortcode_id="409311"]
+<ul>
+ 	<li>Birmingham</li>
+ 	<li>Bromsgrove</li>
+ 	<li>Coventry</li>
+ 	<li>Dudley</li>
+ 	<li>Halesowen</li>
+ 	<li>Rowley Regis</li>
+ 	<li>Smethwick</li>
+ 	<li>Solihull</li>
+ 	<li>Sutton Coldfield</li>
+ 	<li>Tamworth</li>
+ 	<li>Walsall</li>
+ 	<li>West Bromwich</li>
+ 	<li>Wolverhampton</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="202080"]Yorkshire and the Humber[/vc_custom_heading][uncode_list uncode_shortcode_id="207119"]
+<ul>
+ 	<li>Barnsley</li>
+ 	<li>Batley</li>
+ 	<li>Bradford</li>
+ 	<li>Dewsbury</li>
+ 	<li>Doncaster</li>
+ 	<li>Halifax</li>
+ 	<li>Huddersfield</li>
+ 	<li>Hull</li>
+ 	<li>Ilkley</li>
+ 	<li>Keighley</li>
+ 	<li>Leeds</li>
+ 	<li>Sheffield</li>
+ 	<li>Stocksbridge</li>
+ 	<li>Wakefield</li>
+ 	<li>York</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="300572"]South West[/vc_custom_heading][uncode_list uncode_shortcode_id="211122"]
+<ul>
+ 	<li>Barnstaple</li>
+ 	<li>Bath</li>
+ 	<li>Bournemouth</li>
+ 	<li>Bristol</li>
+ 	<li>Bude</li>
+ 	<li>Burnham-on-Sea</li>
+ 	<li>Exeter</li>
+ 	<li>Poole</li>
+ 	<li>Plymouth</li>
+ 	<li>Portishead</li>
+ 	<li>Salisbury</li>
+ 	<li>Swindon</li>
+ 	<li>Taunton</li>
+ 	<li>Torquay</li>
+ 	<li>Trowbridge</li>
+ 	<li>Warminster</li>
+ 	<li>Weston-super-Mare</li>
+ 	<li>Weymouth</li>
+ 	<li>Yeovil</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="113496"]South East[/vc_custom_heading][uncode_list uncode_shortcode_id="561085"]
+<ul>
+ 	<li>Abingdon</li>
+ 	<li>Aldershot</li>
+ 	<li>Aylesbury</li>
+ 	<li>Basingstoke</li>
+ 	<li>Bexley</li>
+ 	<li>Bracknell</li>
+ 	<li>Brighton</li>
+ 	<li>Bromley</li>
+ 	<li>Canterbury</li>
+ 	<li>Caterham</li>
+ 	<li>Chatham</li>
+ 	<li>Chessington</li>
+ 	<li>Crawley</li>
+ 	<li>Croydon</li>
+ 	<li>Dartford</li>
+ 	<li>Dover</li>
+ 	<li>Eastbourne</li>
+ 	<li>Eastleigh</li>
+ 	<li>Epsom</li>
+ 	<li>Esher</li>
+ 	<li>Farnborough</li>
+ 	<li>Farnham</li>
+ 	<li>Folkestone</li>
+ 	<li>Guildford</li>
+ 	<li>Haywards Heath</li>
+ 	<li>High Wycombe</li>
+ 	<li>Kingston upon Thames</li>
+ 	<li>Lancing</li>
+ 	<li>Leatherhead</li>
+ 	<li>Lewes</li>
+ 	<li>Littlehampton</li>
+ 	<li>Loughton</li>
+ 	<li>Maidstone</li>
+ 	<li>Milton Keynes</li>
+ 	<li>Newhaven</li>
+ 	<li>Oxford</li>
+ 	<li>Portsmouth</li>
+ 	<li>Reading</li>
+ 	<li>Redhill</li>
+ 	<li>Rochester</li>
+ 	<li>Romford</li>
+ 	<li>Shoreham-by-Sea</li>
+ 	<li>Slough</li>
+ 	<li>Southampton</li>
+ 	<li>Southend-on-Sea</li>
+ 	<li>Sutton</li>
+ 	<li>Tonbridge</li>
+ 	<li>Walton-on-Thames</li>
+ 	<li>Woking</li>
+ 	<li>Wokingham</li>
+ 	<li>Worthing</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="162410"]Scotland[/vc_custom_heading][uncode_list uncode_shortcode_id="115764"]
+<ul>
+ 	<li>Aberdeen</li>
+ 	<li>Airdrie</li>
+ 	<li>Alloa</li>
+ 	<li>Barrhead</li>
+ 	<li>Bonnyrigg</li>
+ 	<li>Dunfermline</li>
+ 	<li>East Kilbride</li>
+ 	<li>Edinburgh</li>
+ 	<li>Falkirk</li>
+ 	<li>Glasgow</li>
+ 	<li>Greenock</li>
+ 	<li>Hamilton</li>
+ 	<li>Inverness</li>
+ 	<li>Kirkcaldy</li>
+ 	<li>Kirkliston</li>
+ 	<li>Kilmarnock</li>
+ 	<li>Livingston</li>
+ 	<li>Musselburgh</li>
+ 	<li>Penicuik</li>
+ 	<li>Perth</li>
+ 	<li>Port Glasgow</li>
+ 	<li>Stirling</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="187043"]Wales[/vc_custom_heading][uncode_list uncode_shortcode_id="974748"]
+<ul>
+ 	<li>Bangor</li>
+ 	<li>Barry</li>
+ 	<li>Bridgend</li>
+ 	<li>Caerphilly</li>
+ 	<li>Cardiff</li>
+ 	<li>Neath</li>
+ 	<li>Newport</li>
+ 	<li>Pontyclun</li>
+ 	<li>Swansea</li>
+ 	<li>Treforest</li>
+</ul>
+[/uncode_list][/vc_column_inner][/vc_row_inner][vc_row_inner row_inner_height_percent="0" overlay_alpha="50" gutter_size="3" shift_y="0" z_index="0" uncode_shortcode_id="106103" el_class="locations-list"][vc_column_inner width="1/1"][vc_custom_heading heading_semantic="h4" text_size="h4" uncode_shortcode_id="203844"]Northern Ireland[/vc_custom_heading][uncode_list uncode_shortcode_id="182554"]
+<ul>
+ 	<li>Ballyclare</li>
+ 	<li>Ballygally</li>
+ 	<li>Ballymena</li>
+ 	<li>Belfast</li>
+ 	<li>Lisburn</li>
+ 	<li>Newtownabbey</li>
+</ul>
 [/uncode_list][/vc_column_inner][/vc_row_inner][/vc_column][/vc_row]
